[package]
name = "dog-ear"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"
open = "3.0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["pancurses-backend"]
